@@ -107,6 +107,9 @@ FA_USE_HEADER   equ             %01000000                       ; Use +3DOS head
 #define ESXDOS_RST8_F_GETCWD 0xa8
 #define ESXDOS_RST8_F_CHDIR 0xa9
 
+#define ESXDOS_RST8_F_STAT 0xac
+#define ESXDOS_RST8_F_UNLINK 0xad
+
 
 #define ESXDOS_ERROR_EOK                      1          // OK
 #define ESXDOS_ERROR_EGENERAL                 2          // Syntax error
